packages/ketcher-react/src/script/ui/views/components/MonomerCreationWizard/MonomerCreationWizard.module.less
@import '../../../../../style/variables.less';

.monomerCreationWizard {
  position: absolute;
  top: 0;
  left: 0;
  height: calc(100% - 66px);
  width: calc(100% - 62px);
  display: flex;
  justify-content: space-between;
  gap: 8px;
  margin: 16px 11px;
  padding: 16px;
  border: 1px dashed #CAD3DD;
  border-radius: 12px;
  pointer-events: none;
  font-family: @Inter;
}

.leftColumn {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.wizardTitle {
  display: flex;
  align-items: center;
  margin: 0;
  gap: 4px;
}

.notificationsArea {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.rightColumn {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.attributesWindow {
  min-width: 288px;
  display: flex;
  flex-direction: column;
  gap: 16px;
  padding: 12px;
  background-color: #F3F5F7;
  border-radius: 8px;
  pointer-events: auto;
  overflow: auto;
  min-height: 0;
}

.attributesTitle {
  margin: 8px 0 0;
  font-size: 16px;
}

.attributesFields {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.typeOption {
  display: flex;
  align-items: center;
  gap: 4px;

  & > svg {
    color: @color-grey-5;
  }
}

.input {
  width: 200px;
}

.inputError {
  background-color: #FDE0DF !important;
  border: 1px solid @color-secondary-red !important;
}

.divider {
  width: 100%;
  margin: 16px 0;
  border-bottom: 1px solid @color-grey-3;
}

.attachmentPointsHeader {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.attachmentPointInfoIcon {
  color: @color-primary-green;
}

.attachmentPointsTitle {
  margin: 0;
  font-weight: 500;
  font-size: 12px;
}

.attachmentPoints {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 8px;
}

.attachmentPointIcon {
  width: 16px;
  height: 16px;
  color: @color-text-primary;
  opacity: 0.4;
}

.buttonsContainer {
  width: 100%;
  display: flex;
  align-items: center;
  gap: 8px;
}

.buttonsContainer > button {
  flex: 1;
  padding: 6px 12px;
  border-radius: 4px;
  cursor: pointer;
  pointer-events: auto;

  &:hover {
    opacity: 0.8;
  }
}

.buttonDiscard {
  border: 1px solid @color-grey-6;
  background-color: transparent;
  color: @color-grey-6;
}

.buttonSubmit {
  border: 1px solid @color-primary;
  background-color: @color-primary;
  color: #fff;
}

.accordion {
  &:global(.MuiAccordion-root) {
    background: none;
  }

  :global(.MuiAccordionDetails-root) {
    margin-top: 10px !important;
    padding: 4px !important;
    background: none !important;
    box-shadow: none !important;
  }

  :global(.MuiButtonBase-root.MuiAccordionSummary-root.MuiAccordionSummary-gutters) {
    min-height: 20px !important;
    height: 20px !important;
  }
}


.modificationTypeRow {
  display: flex;
  align-items: center;
  padding-bottom: 6px;
}

.deleteModificationTypeButton {
  min-width: 20px !important;
  min-height: 20px !important;
  height: 20px !important;
  width: 20px !important;
  padding: 0;
  margin-left: 4px;
  color: @active-color !important;
  cursor: pointer;

  &:hover {
    background: none;
    opacity: 0.8;
  }
}

.addModificationTypeButton {
  width: 100%;
  padding: 2px 0;
  background: none;
  border: 1px solid @color-grey-6;
  color: @color-grey-6;
  border-radius: 3px;
  font-size: 12px;
  cursor: pointer;

  &:disabled {
    opacity: 0.5;
    cursor: not-allowed;
    pointer-events: none;
  }
}

.smallDialog {
  min-width: 360px;
  max-width: 480px;
}

.dialogOverlay {
  position: fixed;
  inset: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(0, 0, 0, 0.2);
  z-index: 1000;
}

.DialogMessage {
  margin: 16px 0 10px 0;
}

.inputField {
  width: 100%;

  &:global(.MuiTextField-root) {
    :global(.MuiFormLabel-root) {
      display: none;
    }

    :global(.MuiInputBase-root) {
      margin: 0;
      padding: 0 !important;

      &::before {
        display: none;
      }

      &::after {
        display: none;
      }

      :global(.MuiInputBase-input) {
        padding: 0 8px;
      }
    }
  }

  &.error {
    & :global(.MuiInputBase-input) {
      border-color: @color-secondary-red !important;
      background: #FDE0DF !important;
    }
  }
}

.inputLabel {
  margin: 0 0 4px 0;
  font-size: 12px;
  line-height: 14px;
}

